Offline navigation with a service worker successful

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,5 @@
 {
     "compilerOptions": {
-        "target": "ES2020",
-        "outDir": "build"
-    },
-    "include": ["src"]
+        "target": "ES2020"
+    }
 }
