--- a/express-server/package.json
+++ b/express-server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/express": "^5.0.6",
     "express": "^5.2.1",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "typescript": "^5.9.3"
   }
 }
